src/objects/ACCL__Tactic_Template__c.object
<CustomObject>
    <description>Template which controls the behaviour of a tactic</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates wether a tactic template is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Sets the description depending on the current language.</description>
        <formula>CASE 
( 
$User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Description_Language_1__c, 
&quot;Language2&quot;, ACCL__Description_Language_2__c, 
&quot;Language3&quot;, ACCL__Description_Language_3__c,
&quot;Language4&quot;, ACCL__Description_Language_4__c, 
ACCL__Description_Language_1__c
)</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <globalPicklist>ACCL__Sales_Org</globalPicklist>
        <label>Sales Org</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Tactic_Type__c</fullName>
        <description>Specifies the type of a tactic</description>
        <inlineHelpText>Specifies the type of a tactic</inlineHelpText>
        <label>Tactic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Display</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PriceReduction</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Product_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is related to handle products mandatory at Tactic Template level</description>
        <inlineHelpText>This is related to handle products mandatory at Tactic Template level</inlineHelpText>
        <label>Product Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UL_TacticOverlap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to control overlap based on the Tactic Template</description>
        <inlineHelpText>This field is to control overlap based on the Tactic Template</inlineHelpText>
        <label>Tactic Overlap</label>
        <type>Checkbox</type>
    </fields>
    <label>Tactic Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Tactic_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tactic Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactic Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Prevent_Name_Duplication</fullName>
        <active>true</active>
        <description>Name must be unique for Tactic Templates</description>
        <errorConditionFormula>and( 
UPPER(Name) = UPPER(VLOOKUP 
($ObjectType.ACCL__Tactic_Template__c.Fields.Name , $ObjectType.ACCL__Tactic_Template__c.Fields.Name, Name )), 

not( 
Id=VLOOKUP 
($ObjectType.ACCL__Tactic_Template__c.Fields.Id , $ObjectType.ACCL__Tactic_Template__c.Fields.Name, Name )))</errorConditionFormula>
        <errorMessage>Tactic Template Name already exists, please enter different Name.</errorMessage>
    </validationRules>
</CustomObject>